# src/controllers/beaches.ts
@@ -1,22 +1,0 @@
-import { Request, Response } from 'express';
-import { Controller, Post, ClassMiddleware } from '@overnightjs/core';
-import { Beach } from '@src/models/beach';
-import { authMiddleware } from '@src/middlewares/auth';
-import { BaseController } from '.';
-
-@Controller('beaches')
-@ClassMiddleware(authMiddleware)
-export class BeachesController  extends BaseController {
-  @Post('')
-  public async create(req: Request, res: Response): Promise<void> {
-    try {
-      const beach = new Beach({ ...req.body, ...{ userId: req.decoded?.id } });
-
-      const result = await beach.save();
-      
-      res.status(201).send(result);
-    } catch (error) {
-      this.sendCreateUpdateErrorResponse(res, error);
-    }
-  }
-}
